--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ Table of Content
         1.1 Reset CSS
         1.2 Google Fonts
         1.3 Default CSS
-        1.4 Pre-build CSS Class
+        1.4 Variable Colors
+        1.5 Pre-build CSS Class
 
     2. HELPER
         2.1 Social Icons Design
@@ -71,12 +72,24 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-/* 1.4 Pre-build CSS Class */
+/* 1.4 Variable Colors */
+:root {
+    --primary: #1e90ff;
+    --secondary: #ffffff;
+    --border: #D9DDE7;
+    --link: #596172;
+}
+
+
+/* 1.5 Pre-build CSS Class */
 .flex {
     display: flex;
 }
 .flex-c {
     flex-direction: column;
+}
+.flex-wrap {
+    flex-wrap: wrap;
 }
 .justify-center {
     justify-content: center;
@@ -104,11 +117,58 @@ body {
 
 /* Navigation Design */
 .container {
-    width: 90%;
+    max-width: 90%;
     margin: 0 auto;
-    background-color: coral;
+}
+
+nav {
+    padding: 1rem 0;
+}
+
+.search-block {
+    margin-left: 1.4rem;
+    padding: 0.5rem 0.8rem;
+    border: 0.063rem solid var(--border);
+    border-radius: 0.25rem;
 
 }
+.search-block input {
+    border: none;
+    min-width: 11.875rem;
+    
+}
+
+nav ul {
+    width: 100%;
+    text-align: center;
+    background: whitesmoke;
+    padding: 1rem;
+    margin-top: 1rem;
+    display: none;
+}
+.shown {
+    display: block;
+}
+nav ul li {
+    list-style-type: none;
+    padding-bottom: 1rem;
+}
+nav ul li:last-child {
+    padding-bottom: 0;
+}
+nav ul li a{
+    text-decoration: none;
+    color: var(--link);
+    transition: 0.4s all ease;
+}
+nav ul li a:hover {
+    color: var(--primary);
+}
+
+
+
+
+
 
 
 
