--- a/css/style.css
+++ b/css/style.css
@@ -74,10 +74,11 @@ body {
 
 /* 1.4 Variable Colors */
 :root {
-    --primary: #1e90ff;
-    --secondary: #ffffff;
+    --primary: #25DF8F;
+    --secondary: #C1C8D7;
     --border: #D9DDE7;
     --link: #596172;
+    --white: #ffffff;
 }
 
 
@@ -166,8 +167,76 @@ nav ul li a:hover {
 }
 
 
+/* Hero Section Design */
+.hero {
+    min-height: calc(100vh - 4.0625rem);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url(../images/mobile-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+}
+
+.hero-text-block {
+    width: 90%;
+    margin: 0 auto;
+    color: var(--white);
+}
+
+.hero .house-emoji {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.hero-text-block h1 {
+    font-size: 2rem;
+    line-height: 1.3;
+    margin-bottom: 2rem;
+    font-weight: 400;
+}
+.hero-search-block {
+    width: 70%;
+    margin-left: 0;
+    margin-bottom: 2rem;
+}
+.hero-search-block input {
+    width: 100%;
+    background: transparent;
+    border: none;
+    color: var(--white);
+}
+
+.hero-search-block ::placeholder {
+    color: var(--white);
+}
 
 
+.hero-btn-block 
+
+.btn {
+    color: var(--white);
+    padding: 0.7rem 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.btn-primary {
+    background-color: var(--primary);
+}
+.btn-primary:hover {
+    background-color: transparent;
+    border: 1px solid var(--primary);
+}
+.btn-secondary  {
+    background-color: var(--secondary);
+}
+
+.btn-secondary:hover {
+    background-color: transparent;
+    border: 1px solid var(--secondary);
+}
 
 
 
