--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ Table of Content
         1.1 Reset CSS
         1.2 Google Fonts
         1.3 Default CSS
+        1.4 Pre-build CSS Class
 
     2. HELPER
         2.1 Social Icons Design
@@ -68,6 +69,45 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
+}
+
+/* 1.4 Pre-build CSS Class */
+.flex {
+    display: flex;
+}
+.flex-c {
+    flex-direction: column;
+}
+.justify-center {
+    justify-content: center;
+}
+.justify-sb {
+    justify-content: space-between;
+}
+.align-items {
+    align-items: center;
+}
+.flex-1 {
+    flex-basis: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* Navigation Design */
+.container {
+    width: 90%;
+    margin: 0 auto;
+    background-color: coral;
+
 }
 
 
